<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校园通</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="sure">确定</string>
    
    <string name="load">载入</string>
    <string name="delete">删除</string>
    
    <string name="college">学院</string>
    <string name="term">学期</string>
    <string name="classname">班级</string>
    <string name="please_select_class">请选择你的专业班级</string>
    
    
    
    <string name="search_score_tip">请输入你的学号:</string>
  
    <string name="search_score">成绩查询</string>
    
    <string name="search_score_btn">点击查询成绩</string>
    
    <string name="result_search_score_tip">查询结果</string>
    
    <string name="copyright">开发者信息：wei8888go</string>
    <string name="search_score_edit_hint">请输入你的学号进行查询</string>
    
    <string name="no_internet">你的手机没有链接到网络</string>
    
    
    <string name="library_login_tip">注:如果您没在交大网上图书馆设置过密码可以不需要输入密码直接登录!</string>
    <string name="library_login_btn">登录图书馆</string>
    <string name="library_edit_id_hint">请输入您的学号或者借书证号</string>
    <string name="library_edit_pwd_hint">请输入图书馆账号密码</string>
    
    
    <string name="cet_login_btn">立即查询</string>
    <string name="cet_edit_id_hint">请输入四六级考号</string>
    <string name="cet_edit_name_hint">请输入姓名</string>
    
    
    <string name="schedule_day_1">1&#8211;2</string>
    <string name="schedule_day_2">3&#8211;4</string>
    <string name="schedule_day_3">5&#8211;6</string>
    <string name="schedule_day_4">7&#8211;8</string>
    <string name="schedule_day_5">9&#8211;10</string>
    
    
    <string name="up_one_level">..(返回上一级目录)</string>
    <string name="current_dir">.(刷新)</string>
    <string name="strFilePath">文件路径</string>
    <string name="strBrowser">浏览。。。</string>
    <string name="strPermissionDeny">无权限访问该目录</string>
    <string name="resource_uoload_select_file">选择文件</string>
    <string name="resource_uoload_upload_file">上传文件</string>
    
    
    <string name="left_slide_menu_usual_tip">常用</string>
    <string name="left_slide_menu_more_tip">更多</string>
    
    
    <string name="immediately_search">立即查询</string>
    
    
    <string name="search">查询</string>
    <string name="search_by_name">输入姓名查询</string>
    <string name="search_by_stuid">输入学号查询</string>
    
    <string name="xujie">续借</string>
    
    <string name="Pull_refresh">下拉刷新</string>
    <string name="last_update">上次更新</string>
    
   
    
    
    
    
    
    
    
    

</resources>
