<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E4E4E4"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <EditText
        android:id="@+id/library_edit_id"
        android:layout_width="fill_parent"
	    android:layout_height="45dp"
        android:inputType="number"
        android:layout_marginTop="25dp"
        android:background="@drawable/qz_bg_container_cell_normal"
        android:textSize="13sp"
        android:paddingLeft="10dp"
	    android:hint="@string/library_edit_id_hint" />    
    <EditText
        android:id="@+id/library_edit_pwd"
        android:layout_width="fill_parent"
	    android:layout_height="45dp"
        android:inputType="text"
        android:layout_marginTop="10dp"
         android:background="@drawable/qz_bg_container_cell_normal"
        android:textSize="13sp"
        android:paddingLeft="10dp"
	    android:hint="@string/library_edit_pwd_hint" />
    
    <TextView
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:textSize="12sp"
    	android:text="@string/library_login_tip"
    	android:layout_marginTop="5dp"/>
    
    <Button
        android:id="@+id/library_login_btn"
        android:layout_width="fill_parent"
	    android:layout_height="40dp"
        android:text="@string/library_login_btn"
	    android:layout_marginTop="30dp"
        android:background="@drawable/qz_selector_login"
        android:textColor="@color/white"
        android:textSize="18sp"/>

</LinearLayout>
