<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E4E4E4"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >
    
  
    
    <EditText
        android:id="@+id/find_person_edit_name" 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:hint="@string/search_by_name"
        android:background="@drawable/qz_bg_container_cell_normal"
        android:textSize="13sp"
        android:paddingLeft="10dp"
        android:layout_marginTop="50dp"/>
    
    <EditText
        android:id="@+id/find_person_edit_id"  
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:inputType="number"
        android:hint="@string/search_by_stuid"
        android:background="@drawable/qz_bg_container_cell_normal"
        android:textSize="13sp"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"/>
    
    <Button
        android:id="@+id/find_person_search_btn"  
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/search"
        android:background="@drawable/qz_selector_login"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="30dp"/>
    

</LinearLayout>
