<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">
<RelativeLayout
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:id="@+id/head_contentLayout"
	  android:paddingLeft="30dp">
  
	  <FrameLayout
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:layout_alignParentLeft="true"
		  android:layout_centerVertical="true">
  
		 <ImageView
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:layout_gravity="center"
		  android:src="@drawable/arrow"
		  android:id="@+id/head_arrowImageView"
		  android:contentDescription="@string/app_name"/>
		  
		  <ProgressBar
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  style="?android:attr/progressBarStyleSmall"
		  android:layout_gravity="center"
		  android:id="@+id/head_progressBar"
		  android:visibility="gone"/>
  
  	</FrameLayout>
  
    <LinearLayout
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:layout_centerHorizontal="true"
	  android:orientation="vertical"
	  android:gravity="center_horizontal">
	  
		  <TextView
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:text="@string/Pull_refresh"
		  android:textColor="@color/white"
		  android:textSize="20sp"
		  android:id="@+id/head_tipsTextView"/>
		  
		  <TextView
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:id="@+id/head_lastUpdatedTextView"
		  android:text="@string/last_update"
		  android:textColor="#b89766"
		  android:textSize="12sp"/>
	  
	</LinearLayout>
  
  
  </RelativeLayout>
  
  <!-- 此处TextView没有任何意义 -->
  <TextView 
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="gone"/>
  
</LinearLayout>